Fix close not using a translation, fix the sidebar getting too small, fix overlapping close button In phone view sizes the comparison operators sidebar was getting way too small. Set a limit for it so that at some point it would stop being a sidebar and become a collapse. The 400 pixels breakpoint is randomly chosen, if a better one can be chosen, then feel free to change it. Move the content instead of having two identical ones because they're stateful. The selected picture and the like should be persisted between the areas. Close button absolute was used to align to the right, however, that is not needed as ml-auto does the same job and avoids overlapping.

--- a/ajapaik/ajapaik/static/css/photo-comparison-sidebar.css
+++ b/ajapaik/ajapaik/static/css/photo-comparison-sidebar.css
@@ -6,6 +6,11 @@
     transition: right 400ms ease-in;
 }
 
+.photo-comparison-sidebar--small {
+    background-color: #CCCCCC;
+    border-radius: 5px;
+}
+
 .photo-comparison-sidebar--opened {
     right: 0;
 }
@@ -24,6 +29,7 @@
 }
 
 .photo-comparison-sidebar__container {
+    position: relative;
     margin-bottom: 5px;
     margin-top: 5px;
     margin-left: 5px;
@@ -108,11 +114,6 @@
 .photo-comparison-sidebar__close-button {
     padding-top: 0;
     padding-bottom: 0;
-}
-
-.photo-comparison-sidebar__tab__close-button {
-    position: absolute;
-    right: 0;
 }
 
 .photo-comparison-sidebar__icon {
